--- a/index.html
+++ b/index.html
@@ -58,6 +58,162 @@
                 </div>
             </div>
         </div>
+        <section class="menu">
+            <div class="container">
+                <div class="menu-header">
+                    <h2 class="menu-title">Бургеры</h2>
+                    <select class="menu-select">
+                        <option value="">Сортировать</option>
+                        <option value="up">По возрастанию</option>
+                        <option value="down">По убыванию</option>
+                    </select>
+                </div>
+                <div class="menu-grid">
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/01.jpg" alt="Острый бургер">
+                        </div>
+                        <p class="menu-grid-titel">Острый бургер</p>
+                        <p class="menu-grid-price">$26</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/02.jpg" alt="Гриль Бургер">
+                        </div>
+                        <p class="menu-grid-titel">Гриль Бургер</p>
+                        <p class="menu-grid-price">$16</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/03.jpg" alt="Бурег Гигант">
+                        </div>
+                        <p class="menu-grid-titel">Бурег Гигант</p>
+                        <p class="menu-grid-price">$37</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/04.jpg" alt="Бургер с курицей">
+                        </div>
+                        <p class="menu-grid-titel">Бургер с курицей</p>
+                        <p class="menu-grid-price">$18</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/05.jpg" alt="Бургер с курицей">
+                        </div>
+                        <p class="menu-grid-titel">Бургер с курицей</p>
+                        <p class="menu-grid-price">$9</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/06.jpg" alt="Тройной бурегр">
+                        </div>
+                        <p class="menu-grid-titel">Тройной бурегр</p>
+                        <p class="menu-grid-price">$7</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="menu-header">
+                    <h2 class="menu-title">Дополнительно</h2>
+                </div>
+                <div class="menu-grid">
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/07.jpg" alt="Сэндвич">
+                        </div>
+                        <p class="menu-grid-titel">Сэндвич</p>
+                        <p class="menu-grid-price">$3</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/08.jpg" alt="Картошка Фри">
+                        </div>
+                        <p class="menu-grid-titel">Картошка Фри</p>
+                        <p class="menu-grid-price">$5</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/09.jpg" alt="Хот-Дог">
+                        </div>
+                        <p class="menu-grid-titel">Хот-Дог</p>
+                        <p class="menu-grid-price">$7</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-box">
+                <div class="footer-item">
+                    <img class="footer-logo" src="img/footer-logo.svg" alt="Logo">
+                </div>
+                <div class="footer-item">
+                    <h2>основные ссылки</h2>
+                    <ul class="footer-list">
+                        <li><a href="">Меню</a></li>
+                        <li><a href="">Заказ и Доставка</a></li>
+                        <li><a href="">Методы оплаты</a></li>
+                        <li><a href="">Контакты</a></li>
+                    </ul>
+                </div>
+                <div class="footer-item">
+                    <h2>основная информация</h2>
+                    <ul class="footer-list">
+                        <li>
+                            <span>Время</span>
+                            ПН - ВС <br>
+                            11:00 - 22:00 без перерывов
+                        </li>
+                        <li>
+                            <span>Адрес</span>
+                            Москва, ул. Тверская, 5, вход со двора
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-tel">
+                    <ul class="footer-list">
+                        <li>+ 7 900 787 13-13</li>
+                        <li>+ 7 900 700 14-14</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
