--- a/menu.html
+++ b/menu.html
@@ -182,6 +182,8 @@
                             <span class="menu-grid-text">купить</span>
                         </button>
                     </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="footer">
