--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </div>
     </div>
-    <footer class="footer">
+    <footer class="footer footer-indx">
         <div class="container">
             <div class="footer-box">
                 <div class="footer-item">
