--- a/menu.html
+++ b/menu.html
@@ -197,7 +197,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <div class="footer-box">
+            <div class="footer-box" id="footer-box">
                 <div class="footer-item">
                     <img class="footer-logo" src="img/footer-logo.svg" alt="Logo">
                 </div>
@@ -251,7 +251,7 @@
             <li><a href="index.html">Главная</a></li>
             <li><a href="#" class="active">Меню</a></li>
             <li><a href="#">О нас</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a href="#footer-box">Контакты</a></li>
         </ul>
         <button class="burger-close"  onclick="closeModal()"></button>
     </div>
